syntax ="proto3";
package proto;

option go_package = "github.com/alijabbar034/go-microservice/proto";

message PriceRequest {
    string ticker = 1;
}


message PriceResponse {
    string ticker =1;
    float price = 2;
}


service PriceFetcher {
    rpc FetchPrice (PriceRequest) returns (PriceResponse){};
}